--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SMSDEFENDER</string>
+    <string name="app_name">Payment Protector</string>
     <string name="securityOK">✔ Устройство защищено</string>
 </resources>
